[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/TaskItem.gd" type="Script" id=1]
[ext_resource path="res://UI Textures/Line_Half.png" type="Texture" id=2]
[ext_resource path="res://UI Textures/Line_H.png" type="Texture" id=3]
[ext_resource path="res://UI Textures/Line.png" type="Texture" id=4]
[ext_resource path="res://defaultTheme.tres" type="Theme" id=5]
[ext_resource path="res://BurgerMenuIcon.png" type="Texture" id=6]
[ext_resource path="res://UI Textures/Bin.png" type="Texture" id=7]

[node name="TaskItem" type="Control"]
margin_right = 400.0
margin_bottom = 45.0
rect_min_size = Vector2( 0, 60 )
script = ExtResource( 1 )

[node name="LineHalf" type="TextureRect" parent="."]
margin_top = -5.0
margin_right = 20.0
margin_bottom = 60.0
texture = ExtResource( 2 )
expand = true

[node name="LineFull" type="TextureRect" parent="."]
visible = false
margin_top = -5.0
margin_right = 20.0
margin_bottom = 60.0
texture = ExtResource( 4 )
expand = true

[node name="LineRight" type="TextureRect" parent="."]
margin_right = 20.0
margin_bottom = 60.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
theme = ExtResource( 5 )
color = Color( 0.364706, 0.364706, 0.364706, 0.392157 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
theme = ExtResource( 5 )

[node name="SizeTween" type="Tween" parent="ColorRect"]

[node name="ColorTween" type="Tween" parent="ColorRect"]

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0

[node name="ContentBackground" type="Panel" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Control/ContentBackground"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 8

[node name="TextEdit" type="TextEdit" parent="Control/ContentBackground/HBoxContainer"]
margin_right = 208.0
margin_bottom = 45.0
rect_min_size = Vector2( 150, 0 )
size_flags_horizontal = 3
text = "Task Description"
middle_mouse_paste_enabled = false
wrap_enabled = true

[node name="LineEdit" type="LineEdit" parent="Control/ContentBackground/HBoxContainer"]
visible = false
margin_left = 168.0
margin_right = 318.0
margin_bottom = 44.0
rect_min_size = Vector2( 150, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Task Name"

[node name="Label" type="Label" parent="Control/ContentBackground/HBoxContainer"]
visible = false
margin_left = 156.0
margin_right = 227.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "100%"
align = 1
valign = 1

[node name="LabelTween" type="Tween" parent="Control/ContentBackground/HBoxContainer/Label"]

[node name="OptionButton" type="OptionButton" parent="Control/ContentBackground/HBoxContainer"]
margin_left = 216.0
margin_right = 311.0
margin_bottom = 45.0
rect_min_size = Vector2( 95, 0 )
text = "New"
flat = true
items = [ "New", null, false, 0, null, "Started", null, false, 1, null, "WIP", null, false, 2, null, "Testing", null, false, 3, null, "Complete", null, false, 4, null, "On Hold", null, false, 5, null, "Cancelled", null, false, 6, null ]
selected = 0

[node name="MenuButton" type="MenuButton" parent="Control/ContentBackground/HBoxContainer"]
visible = false
margin_left = 316.0
margin_right = 346.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
focus_mode = 2
icon = ExtResource( 6 )
expand_icon = true
items = [ "Delete", null, 0, false, false, 0, 0, null, "", false ]

[node name="DeleteButton" type="Button" parent="Control/ContentBackground/HBoxContainer"]
margin_left = 319.0
margin_right = 364.0
margin_bottom = 45.0
rect_min_size = Vector2( 45, 45 )
flat = true
icon_align = 1
expand_icon = true

[node name="TextureRect" type="TextureRect" parent="Control/ContentBackground/HBoxContainer/DeleteButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 9.0
margin_top = 9.0
margin_right = -9.0
margin_bottom = -9.0
texture = ExtResource( 7 )
expand = true
